--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo da Forca</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./resposividade.css">
 </head>
 <body>
-    
+
     <!-- Topo -->
     <h1>Jogo da Forca</h1>
     <img id="imagem" src="./img/forca0.png">
     <div id="exibicao-palavra">___</div>
     <input type="text" id="entrada-letra" placeholder="Chute uma letra" maxlength="1">
     <button type="button" id="btn-chutar">Chutar</button>
+    <div class="dicas">
+        <button type="button" id="dica-btn">Pedir Dica</button>
+        <div id="dica"></div>
+        <div id="dicas-container"></div>
+    </div>
 
     <!-- Baixo -->
      <h2>Letras Chutadas</h2>
